<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddHappyPlaceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_place"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/mediumBlue"
        android:theme="@style/CustomToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_place"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_content_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_title"
                    android:textSize="@dimen/edit_text_size"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/til_title"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_description"
                    android:textSize="@dimen/edit_text_size"
                    android:inputType="textCapWords" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/til_description"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_date"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textSize="@dimen/edit_text_size"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/til_date"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/edit_text_location"
                    android:textSize="@dimen/edit_text_size"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_select_current_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_place_select_current_location_marginTop"
                android:background="@drawable/shape_image_view_border"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/add_place_select_current_location_padding"
                android:text="@string/add_place_select_current_location_text"
                android:textColor="@color/paleBlue"
                android:textSize="@dimen/add_place_select_current_location_textsize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_location" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/aiv_photos"
                android:layout_width="@dimen/add_screen_place_image_size"
                android:layout_height="@dimen/add_screen_place_image_size"
                android:layout_marginTop="@dimen/add_screen_place_image_margin"
                android:padding="@dimen/add_screen_place_image_padding"
                app:layout_constraintTop_toBottomOf="@id/tv_select_current_location"
                android:background="@drawable/shape_image_view_border"
                android:scaleType="centerCrop"
                android:paddingBottom="@dimen/add_screen_place_image_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/add_placeholder" />

            <TextView
                android:id="@+id/tv_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_add_image"
                android:textStyle="bold"
                android:textColor="@color/paleBlue"
                app:layout_constraintBottom_toTopOf="@id/btn_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/aiv_photos"
                app:layout_constraintTop_toBottomOf="@id/til_location" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_text_btn_save"
                android:textStyle="bold"
                android:layout_margin="16dp"
                android:gravity="center"
                android:backgroundTint="@color/mediumBlue"
                android:padding="@dimen/main_content_padding"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aiv_photos"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>